# agendia

backend/: .coverage  PyWhatKit_DB.txt  agendia.db  main.py  pyproject.toml  pytest.ini  run_scenario.py
backend/agendia/: config.py
backend/agendia/application/: ports.py  use_cases.py
backend/agendia/core/: domain.py
backend/agendia/infrastructure/: database.py  models.py  repositories.py  whatsapp_adapter.py
backend/tests/: conftest.py
backend/tests/application/: test_use_cases.py
backend/tests/core/: test_domain.py
backend/tests/infraestructure/: test_repositories.py
whatsapp-adapter/: index.js  package-lock.json  package.json
whatsapp-adapter/.wwebjs_cache/: 2.3000.1023857066.html  2.3000.1023857824.html
